<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF8EF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <dam.cristian.icubes.BotonPersonalizado
            android:id="@+id/jugar"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:onClick="jugar"
            android:tag="@string/jugar" />

        <dam.cristian.icubes.BotonPersonalizado
            android:id="@+id/tvPuntuaciones"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/jugar"
            android:layout_below="@+id/jugar"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="mostrarPuntuaciones"
            android:tag="@string/clasificacion" />

        <dam.cristian.icubes.BotonPersonalizado
            android:id="@+id/instrucciones"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/tvPuntuaciones"
            android:layout_below="@+id/tvPuntuaciones"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="mostrarInstrucciones"
            android:tag="@string/instrucciones" />

        <dam.cristian.icubes.BotonPersonalizado
            android:id="@+id/salir"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/instrucciones"
            android:layout_below="@+id/instrucciones"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="salir"
            android:tag="@string/salir" />
    </RelativeLayout>

</RelativeLayout>